//SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION. All rights reserved.

//Licensed under the Apache License, Version 2.0 (the "License");
//you may not use this file except in compliance with the License.
//You may obtain a copy of the License at

//http://www.apache.org/licenses/LICENSE-2.0

//Unless required by applicable law or agreed to in writing, software
//distributed under the License is distributed on an "AS IS" BASIS,
//WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//See the License for the specific language governing permissions and
//limitations under the License.

//SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package compute_connector;

option go_package = "go.corp.nvidia.com/osmo/proto/compute_connector;compute_connector";

// LoggingType represents different logging levels
enum LoggingType {
  INFO = 0;
  DEBUG = 1;
  WARNING = 2;
  EXCEPTION = 3;
}

// LoggingBody represents a logging message
message LoggingBody {
  LoggingType type = 1;
  string text = 2;
  string workflow_uuid = 3;  // Empty string represents non-workflow logging
}

// ListenerMessage represents messages sent from workflow backends to the service
message ListenerMessage {
  // UUID uniquely identifies this message for correlation and acknowledgment
  string uuid = 1;

  // Timestamp when the message was created (ISO 8601 format, e.g., "2025-01-15T10:30:00Z")
  string timestamp = 2;

  // Message body - exactly one of these must be set
  oneof body {
    UpdatePodBody update_pod = 3;
    LoggingBody logging = 4;
    UpdateNodeBody resource = 5;
    UpdateNodeUsageBody resource_usage = 6;
  }
}

// AckMessage represents acknowledgment messages sent from the service to workflow backends
message AckMessage {
  // UUID of the client message being acknowledged
  string ack_uuid = 1;
}

// ConditionMessage represents a pod condition
message ConditionMessage {
  string reason = 1;
  string message = 2;
  string timestamp = 3;  // ISO 8601 timestamp (e.g., "2025-01-15T10:30:00Z")
  bool status = 4;
  string type = 5;
}

// UpdatePodBody represents the pod update message body
message UpdatePodBody {
  string workflow_uuid = 1;
  string task_uuid = 2;
  int32 retry_id = 3;
  string container = 4;
  string node = 5;
  string pod_ip = 6;
  string message = 7;
  string status = 8;
  int32 exit_code = 9;  // Use -1 to represent None/null
  string backend = 10;
  repeated ConditionMessage conditions = 11;
}

// InitBody represents the initialization message body
message InitBody {
  string k8s_uid = 1;
  string k8s_namespace = 2;
  string name = 3;
  string version = 4;
  string node_condition_prefix = 5;
}

// Taint represents a Kubernetes node taint
message Taint {
  string key = 1;
  string value = 2;
  string effect = 3;
  string time_added = 4;  // ISO 8601 timestamp, may be empty
}

// UpdateNodeBody represents a node resource message (for node add/update/delete events)
message UpdateNodeBody {
  string hostname = 1;
  bool available = 2;
  repeated string conditions = 3;
  map<string, string> processed_fields = 4;
  map<string, string> allocatable_fields = 5;
  map<string, string> label_fields = 6;
  repeated Taint taints = 7;
  bool delete = 8;  // When true, indicates the node has been deleted
}

// UpdateNodeUsageBody represents aggregated resource usage on a node
message UpdateNodeUsageBody {
  string hostname = 1;
  map<string, string> usage_fields = 2;
  map<string, string> non_workflow_usage_fields = 3;
}
